--- a/src/css/root.css
+++ b/src/css/root.css
@@ -3,28 +3,49 @@
     --font-family: "DM Sans", sans-serif;
 
     /* colors */
-    --clr-black: rgb(var(--black));
-    --clr-black-10: rgba(var(--black), 0.1);
-    --clr-black-20: rgba(var(--black), 0.2);
-    --clr-black-50: rgba(var(--black), 0.5);
-    --clr-black-linear: linear-gradient(
-        114deg,
-        rgba(0, 0, 0, 0.4) 0%,
-        rgba(0, 0, 0, 0.4) 100%
-    );
-    --clr-green: #4dc274;
-    --clr-green-active: #38AE5F;
-    --clr-green-10: rgba(77, 194, 116, 0.1);
-    --clr-green-dark: #38ae5f;
-    --clr-light-green: #d4fde1;
-    --clr-gray: var(--grey);
-    --clr-white: rgb(var(--white));
-    --clr-white-10: rgba(var(--white), 0.1);
-    --clr-white-40: rgba(var(--white), 0.4);
-    --clr-white-50: rgba(var(--white), 0.5);
-    --clr-white-60: rgba(var(--white), 0.6);
-    --clr-white-70: rgba(var(--white), 0.7);
-    --clr-green-linear: linear-gradient(80deg, #4dc274 0%, #bee8cc 100%);
+    --color-main-bg: #F4F4F4;
+    --color-main-dark: #242424;
+    --color-main-light: #F4F4F4;
+    --color-dark-hover: rgba(36,36,36,80);
+    --color-light-hover: rgba(244,244,244,10);
+
+    --color-footer-foot: #C6CDD1;
+
+    --color-pager-light: #D4D4D4;
+
+    --color-stars-full: #EEA10C;
+    --color-stars-empty: rbga(244,244,244,20);
+
+    --color-exmenu-add: rgba(36,36,36,50);
+    --color-exmenu-inact: rgba(36,36,36,60);
+
+    --color-quote-text: rgba(244,244,244,60);
+    --color-quote-ifill: rgba(244.244,244,20);
+
+    --color-110m-light: rgba(36,36,36,60);
+
+    --color-section-light: rgba(244,244,244,40);
+
+    --color-workout-bg: #FFFFFF;
+    --color-workout-border: rgba(239,237,232,20);
+    --color-workout-light: rgba(36,36,36,40);
+
+    --color-popup-bg: #242424;
+    --color-popup-txt: rgba(244,244,244,60);
+    --color-popup-main: #F4F4F4;
+    --color-popup-line: rgba(244,244,244,20);
+    --color-popup-gifmask: rgba(4,4,4,20);
+    --color-popup-varname: rgba(244,244,244,40);
+    --color-popup-varvalue: rgba(244,244,244,100);
+
+    --color-fav-scroll-bg: rgba(36,36,36,10);
+    --color-fav-scroll-fg: rgba(36,36,36,100);
+
+    --color-mm-bg: #242424;
+    --color-mm-x: #F4F4F4;
+    --color-mm-menu: #F4F4F4;
+    --color-mm-social-border: rgba(244,244,244,10);
+    --color-mm-social-fill: rgba(244,244,244,100);
 
     /* animation */
     --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
