--- a/src/css/home-block-2.css
+++ b/src/css/home-block-2.css
@@ -1,3 +1,36 @@
 .section-title {
-    background: red;
+    font-size: 28px;
+    line-height: 1.357;
+    font-weight: 400;
+    color: var(--color-main-dark);
+    letter-spacing: 0.02em;
+}
+
+.exercises-menu-list {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.exercises-menu-button {
+    background: none;
+    border: none;
+    color: var(--color-exmenu-inact);
+    font-size: 14px;
+    line-height: 1.428;
+    cursor: pointer;
+}
+
+.exercises-menu-button.active {
+    color: var(--color-main-dark);
+}
+
+.exercises-menu-button.active::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: var(--color-main-dark);
+    margin-top: 8px;
 }
