--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,7 @@
 /* section styles */
 @import url('./header.css');
 @import url('./sct-hero.css');
+@import url('./home-block-2.css');
 @import url('./sct-exercises.css');
 @import url('./sct-qfd.css');
 @import url('./footer.css');
