--- a/src/partials/home-block-2.html
+++ b/src/partials/home-block-2.html
@@ -1,1 +1,12 @@
 <h2 class="section-title">Exercises</h2>
+<ul class="exercises-menu-list">
+    <li class="exercises-menu-item">
+        <button class="exercises-menu-button active" id="musclesButton">Muscles</button>
+    </li>
+    <li class="exercises-menu-item">
+        <button class="exercises-menu-button" id="bodyPartsButton">Body parts</button>
+    </li>
+    <li class="exercises-menu-item">
+        <button class="exercises-menu-button" id="equipmentButtons">Equipment</button>
+    </li>
+</ul>
