--- a/src/css/home-block-2.css
+++ b/src/css/home-block-2.css
@@ -34,3 +34,27 @@
     background: var(--color-main-dark);
     margin-top: 8px;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+    .section-title {
+        font-size: 44px;
+        line-height: 1.09;
+    }
+
+    .exercises-menu-list {
+        margin-top: 32px;
+    }
+
+    .exercises-menu-button {
+        font-size: 16px;
+        line-height: 1.5;
+    }
+}
+
+@media (min-width: 1440px) {
+    .section-top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
