Clean up styles

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -6,24 +6,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-}
-
-.nav-link {
-  color: #f4f4f4;
-  font-family: 'DM Sans';
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5;
 }
 
 .active .nav-link {
-  color: #242424;
+  color: var(--color-main-dark);
 }
 
 .logo-icon {
-  fill: #242424;
+  fill: var(--color-main-dark);
+}
+
+.menu-icon {
+  fill: var(--color-main-dark);
 }
 
 @media only screen and (max-width: 767px) {
@@ -51,15 +45,14 @@
     align-items: center;
     width: 233px;
     height: 52px;
-    flex-shrink: 0;
     border-radius: 60px;
-    background: #242424;
+    background: var(--color-main-dark);
     padding: 8px 34px;
     gap: 10px;
   }
 
   .nav-item.active {
-    background: #f4f4f4;
+    background: var(--color-main-light);
   }
 
   .nav-item {
@@ -70,10 +63,7 @@
     gap: 10px;
     border-radius: 30px;
     background: transparent;
-    color: #f4f4f4;
-    font-family: 'DM Sans';
-    font-size: 16px;
-    font-style: normal;
+    color: var(--color-main-light);
     font-weight: 400;
     line-height: 1.5;
   }
@@ -82,7 +72,7 @@
   }
 
   .header-socials.socials .socials-icon {
-    fill: #242424;
+    fill: var(--color-main-dark);
   }
 
   @media only screen and (min-width: 1440px) {
