--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,7 @@
 @import url('./root.css');
 
 /* section styles */
-@import url('./menu.css');
+@import url('./socials.css');
 @import url('./header.css');
 @import url('./sct-hero.css');
 @import url('./sct-exercises.css');
