--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,7 @@
 .header {
-    padding: 24px 20px;
-    padding-bottom: 0;
+    padding: 0 20px;
+    margin-top: 20px;
+    margin-bottom: 84px;
 }
 .header-container {
     display: flex;
@@ -32,8 +33,9 @@
 
 @media only screen and (min-width: 768px) {
     .header {
-        padding: 24px 32px;
-        padding-bottom: 0;
+        padding: 0 32px;
+        margin-top: 24px;
+        margin-bottom: 100px;
     }
     .header-nav {
         justify-content: left;
@@ -87,8 +89,9 @@
 
     @media only screen and (min-width: 1440px) {
         .header {
-            padding: 28px 32px;
-            padding-bottom: 0;
+            padding: 0 32px;
+            margin-top: 28px;
+            margin-bottom: 90px;
         }
 
         .nav-list {
