--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<header class="header">
-    <div class="container header-container">
+<header class="header container">
+    <div class="header-container">
         <a class="logo" href="./">
             <svg class="logo-icon" width="132" height="24">
                 <use href="./img/icons.svg#icon-logo"></use>
