--- a/src/partials/sct-exercises.html
+++ b/src/partials/sct-exercises.html
@@ -1,1 +1,4 @@
-<load src="partials/home-block-2.html" />
+<div class="exercises-group-list">
+  <load src="partials/home-block-2.html" />
+  <load src="partials/group-list.html" />
+</div>
