--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,3 +12,4 @@
 @import url('./footer.css');
 @import url('./mobile-menu.css');
 @import url('./sct-favorites.css');
+@import url('./group-list.css');
