--- a/src/css/socials.css
+++ b/src/css/socials.css
@@ -1,20 +1,25 @@
 .socials {
-  display: flex;
-  gap: 12px;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    gap: 12px;
+    align-items: center;
+    justify-content: center;
 }
 
 .socials-item {
-  border-radius: 10px;
-  padding: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    border-radius: 10px;
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.socials-link {
+    width: 100%;
+    height: 100%;
 }
 
 .socials-icon {
-  width: 28px;
-  height: 28px;
-  opacity: 0.8;
+    width: 28px;
+    height: 28px;
+    opacity: 0.8;
 }
