--- a/src/css/group-list.css
+++ b/src/css/group-list.css
@@ -1,14 +1,14 @@
 .group-list {
   font-family: var(--font-family);
   display: flex;
-  row-gap: 32px;
-  column-gap: 15px;
+  flex-direction: row;
   flex-wrap: wrap;
+  gap: 20px;
 }
 
 .group-list__item {
-  width: 290px;
-  height: 242px;
+  height: 225px;
+  flex: 0 0 100%;
   border-radius: 12px;
   position: relative;
   overflow: hidden;
@@ -46,4 +46,21 @@
   font-weight: 400;
   font-size: 12px;
   color: var(--color-section-light)
+}
+
+@media (min-width: 768px) {
+  .group-list {
+    gap: 32px 15px;
+  }
+
+  .group-list__item {
+    flex-basis: 225px;
+  }
+}
+
+@media (min-width: 1168px) {
+  .group-list__item {
+    height: 242px;
+    flex-basis: 290px;
+  }
 }
