quote of day mobile layout ready

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,3 +10,4 @@
 @import url('./footer.css');
 @import url('./mobile-menu.css');
 @import url('./sct-favorites.css');
+@import url('./quote-of-day.css');
