--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,11 +4,41 @@ footer.container {
     padding: 40px 20px 10px 20px;
 }
 
+@media only screen and (min-width: 768px) {
+    footer.container {
+        padding: 64px 32px 16px 32px;
+    }
+}
+
 .footer-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: start;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-container {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+}
+
+.footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 120px;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-content {
+        justify-content: space-between;
+        margin-bottom: 64px;
+    }
+}
+
+.footer-logo-socials {
+    margin-bottom: 40px;
 }
 
 /* Logo styles */
@@ -23,23 +53,25 @@ footer.container {
 }
 
 /* Social media icons */
-.footer-socials {
-    margin-bottom: 40px;
-}
-
 .footer-socials .socials-item {
     border: 1px solid var(--color-mm-social-border);
 }
 
 .footer-socials .socials-icon {
     fill: var(--color-main-light);
-    width: 24px;
-    height: 24px;
 }
 
-.footer-socials .socials-link {
-    width: 24px;
-    height: 24px;
+@media only screen and (max-width: 767px) {
+    .footer-socials .socials-icon {
+        fill: var(--color-main-light);
+        width: 24px;
+        height: 24px;
+    }
+
+    .footer-socials .socials-link {
+        width: 24px;
+        height: 24px;
+    }
 }
 
 .footer-socials .socials-item:hover,
@@ -52,7 +84,7 @@ footer.container {
     fill: var(--color-main-dark);
 }
 
-
+/* Text section */
 .footer-text {
     display: flex;
     justify-content: flex-start;
@@ -60,7 +92,12 @@ footer.container {
     margin-bottom: 20px;
 }
 
-/* Text section */
+@media only screen and (min-width: 768px) {
+    .footer-text {
+        width: 434px;
+    }
+}
+
 .footer-text p {
     font-weight: 400;
     font-size: 38px;
@@ -70,21 +107,53 @@ footer.container {
     text-align: left;
 }
 
+@media only screen and (min-width: 768px) {
+    .footer-text p {
+        font-size: 56px;
+        line-height: 107%;
+    }
+}
+
 .footer-text em {
     font-style: italic;
 }
 
 /* Form section */
-.footer-form {
+.footer-subscribe {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     width: 100%;
-    margin-bottom: 120px;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-subscribe {
+        margin-left: auto;
+        width: 434px;
+    }
 }
 
 .footer-subscribe-title {
     line-height: 129%;
+    margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-subscribe-title {
+        font-size: 18px;
+        line-height: 133%;
+    }
+}
+
+.footer-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-form {
+        width: 352px;
+    }
 }
 
 .footer-input {
@@ -113,33 +182,32 @@ footer.container {
 }
 
 /* Footer bottom section */
-.footer-bottom {
+.footer-bottom-row {
     color: var(--color-footer-foot);
     font-weight: 400;
     font-size: 14px;
     line-height: 129%;
     letter-spacing: -0.02em;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+
     text-align: center;
     margin-top: auto;
-}
-
-.footer-bottom-row {
-    display: flex;
-    justify-content: space-between;
     width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-.footer-rights {
-    text-align: left;
+@media only screen and (min-width: 768px) {
+    .footer-rights {
+        margin-right: 78px;
+    }
 }
 
 .footer-links {
     color: var(--color-footer-foot);
     display: flex;
-    flex-direction: row;
     gap: 8px;
     align-items: center;
 }
