quote of day ready

--- a/src/partials/sct-exercises.html
+++ b/src/partials/sct-exercises.html
@@ -1,4 +1,5 @@
 <div class="exercises-group-list">
   <load src="partials/home-block-2.html" />
+  <load src="partials/quote-of-day.html" />
   <load src="partials/group-list.html" />
 </div>
