add footer for desktop

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,6 +2,7 @@ footer.container {
     background-color: var(--color-main-dark);
     color: var(--color-popup-main);
     padding: 40px 20px 10px 20px;
+    max-width: 100%;
 }
 
 @media only screen and (min-width: 768px) {
@@ -37,8 +38,31 @@ footer.container {
     }
 }
 
+@media only screen and (min-width: 1440px) {
+    .footer-content {
+        margin-bottom: 70px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .footer-content {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+}
+
 .footer-logo-socials {
     margin-bottom: 40px;
+}
+
+@media only screen and (min-width: 1440px) {
+    .footer-logo-socials {
+        margin-right: 158px;
+    }
 }
 
 /* Logo styles */
@@ -98,6 +122,12 @@ footer.container {
     }
 }
 
+@media only screen and (min-width: 1440px) {
+    .footer-text {
+        width: 595px;
+    }
+}
+
 .footer-text p {
     font-weight: 400;
     font-size: 38px;
@@ -132,6 +162,12 @@ footer.container {
     }
 }
 
+@media only screen and (min-width: 1440px) {
+    .footer-subscribe {
+        width: 352px;
+    }
+}
+
 .footer-subscribe-title {
     line-height: 129%;
     margin-bottom: 20px;
@@ -156,15 +192,32 @@ footer.container {
     }
 }
 
+@media only screen and (min-width: 1440px) {
+    .footer-form {
+        width: 100%;
+    }
+}
+
 .footer-input {
     width: 100%;
     height: 42px;
     background-color: transparent;
     color: var(--color-popup-main);
-    text-align: center;
     border: 1px solid #f4f4f4;
     border-radius: 30px;
-    padding: 12px 286px 12px 14px;
+    padding: 12px 14px;
+    text-align: left;
+}
+
+.footer-input::placeholder {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 129%;
+    color: var(--color-quote-text);
+}
+
+.footer-input:focus::placeholder {
+    color: transparent;
 }
 
 .footer-button {
