--- a/src/partials/home-block-2.html
+++ b/src/partials/home-block-2.html
@@ -1,4 +1,4 @@
-<div class="section-top">
+<div class="section-top container">
     <h2 class="section-title">Exercises</h2>
     <ul class="exercises-menu-list">
         <li class="exercises-menu-item">
