--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,17 +3,18 @@
     margin-top: 20px;
     margin-bottom: 84px;
 }
-.header-container {
+
+.header-nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
 }
 
 .active .nav-link {
     color: var(--color-main-dark);
 }
 
-.logo-icon {
+header .logo-icon {
     fill: var(--color-main-dark);
 }
 
@@ -26,7 +27,7 @@
         display: none;
     }
 
-    .header-nav {
+    .nav-list {
         display: none;
     }
 }
@@ -39,6 +40,15 @@
     }
     .header-nav {
         justify-content: left;
+    }
+    .header-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    header .logo {
+        margin-right: 103px;
     }
 
     .nav-list {
@@ -69,6 +79,7 @@
         font-weight: 400;
         line-height: 1.5;
     }
+
     .header-socials.socials .socials-item {
         border: 1px solid var(--color-fav-scroll-bg);
     }
@@ -98,6 +109,10 @@
             width: 265px;
             height: 52px;
             padding: 8px 50px;
+        }
+
+        header .logo {
+            margin-right: 423px;
         }
     }
 }
