--- a/src/partials/sct-favorites.html
+++ b/src/partials/sct-favorites.html
@@ -1,1 +1,9 @@
-<load src="partials/quote-of-day.html" />
+<section class="favorites-page">
+    <h2 class="section-title">Favorites</h2>
+    <div class="quote-wrapper">
+        <load src="partials/quote-of-day.html" />
+        <load src="partials/norm-of-sports.html" />
+    </div>
+
+    <load src="partials/favor.html" />
+</section>
