add js for footer subscription

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -17,7 +17,7 @@
             <div class="footer-subscribe">
                 <p class="footer-subscribe-title">Subscribe and learn about new exercises!</p>
                 <form class="footer-form">
-                    <input class="footer-input" placeholder="Email" type="email">
+                    <input class="footer-input" placeholder="Email" name="email" required>
                     <button class="footer-button" type="submit">Send</button>
                 </form>
             </div>
