--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -209,6 +209,7 @@ footer.container {
     border-radius: 30px;
     padding: 12px 14px;
     text-align: left;
+    transition: var(--transition);
 }
 
 .footer-input::placeholder {
@@ -230,10 +231,14 @@ footer.container {
     border: none;
     cursor: pointer;
     border-radius: 30px;
+    transition: var(--transition);
 }
 
 .footer-button:hover {
-    background-color: var(--color-dark-hover);
+    background-color: var(--color-main-dark);
+    color: var(--color-main-light);
+    border: 1px solid var(--color-main-light);
+    border-radius: 30px;
 }
 
 /* Footer bottom section */
@@ -260,15 +265,17 @@ footer.container {
     }
 }
 
+@media only screen and (min-width: 1440px) {
+    .footer-rights {
+        margin-right: 122px;
+    }
+}
+
 .footer-links {
     color: var(--color-footer-foot);
     display: flex;
     gap: 8px;
     align-items: center;
-}
-
-.footer-links a:hover {
-    color: var(--color-dark-hover);
 }
 
 .copyright {
