--- a/src/partials/group-list.html
+++ b/src/partials/group-list.html
@@ -1,1 +1,10 @@
+<form class="exercises-form visually-hidden">
+    <input class="exercises-input" name="search" type="text" placeholder="Search" required />
+    <button class="exercises-button" type="submit" data-start>
+        <svg class="search-icon" width="18" height="18" aria-label="search icon">
+            <use href="./img/icons.svg#icon-search"></use>
+        </svg>
+    </button>
+</form>
 <div class="group-list"></div>
+<div class="pagination"></div>
