--- a/src/partials/sct-exercises.html
+++ b/src/partials/sct-exercises.html
@@ -1,5 +1,8 @@
 <div class="exercises-group-list">
   <load src="partials/home-block-2.html" />
-  <load src="partials/quote-of-day.html" />
+  <div class="static-block-wrapper">
+    <load src="partials/quote-of-day.html" />
+    <load src="partials/exercises-static-block.html" />
+  </div>
   <load src="partials/group-list.html" />
 </div>
