--- a/src/partials/sct-favorites.html
+++ b/src/partials/sct-favorites.html
@@ -2,6 +2,7 @@
     <h2 class="section-title">Favorites</h2>
     <div class="quote-wrapper">
         <load src="partials/quote-of-day.html" />
+        <load src="partials/favorites-static-block.html" />
         <load src="partials/norm-of-sports.html" />
     </div>
 
