--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,3 +14,4 @@
 @import url('./sct-favorites.css');
 @import url('./quote-of-day.css');
 @import url('./group-list.css');
+@import url('./static-block.css');
