--- a/src/css/root.css
+++ b/src/css/root.css
@@ -66,11 +66,12 @@ html {
 
 .visually-hidden {
     position: absolute;
-    width: 1px;
-    height: 1px;
+    width: 1px !important;
+    height: 1px !important;
     margin: -1px;
     border: 0;
     padding: 0;
+    display: none !important;
 
     white-space: nowrap;
     clip-path: inset(100%);
