--- a/src/css/sct-exercises.css
+++ b/src/css/sct-exercises.css
@@ -34,6 +34,10 @@
     .exercise-card {
         width: 442px;
     }
+
+    .exercises-group-list {
+      flex-direction: row;
+    }
 }
 
 .top-row {
@@ -162,6 +166,8 @@
 .exercises-form {
     position: relative;
     height: 44px;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 .exercises-input {
@@ -179,6 +185,8 @@
     .exercises-form {
         width: 273px;
         height: 48px;
+        margin: 0;
+        display: inline-block;
     }
 }
 
@@ -186,6 +194,11 @@
     .exercises-input {
         font-size: 16px;
         line-height: 1.5em;
+    }
+
+    .exercises-form {
+      margin-left: auto;
+      margin-right: 30px;
     }
 }
 
@@ -241,6 +254,7 @@
   gap: 10px;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .page-button {
