--- a/src/partials/home-block-2.html
+++ b/src/partials/home-block-2.html
@@ -1,5 +1,13 @@
 <div class="section-top container">
     <h2 class="section-title">Exercises</h2>
+    <form class="exercises-form visually-hidden">
+        <input class="exercises-input" name="search" type="text" placeholder="Search" required />
+        <button class="exercises-button" type="submit" data-start>
+            <svg class="search-icon" width="18" height="18" aria-label="search icon">
+                <use href="./img/icons.svg#icon-search"></use>
+            </svg>
+        </button>
+    </form>
     <ul class="exercises-menu-list">
         <li class="exercises-menu-item">
             <button class="exercises-menu-button active" id="musclesButton">Muscles</button>
