--- a/src/css/modal/modal.css
+++ b/src/css/modal/modal.css
@@ -46,7 +46,6 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     min-width: 335px;
     min-height: 200px;
-    padding: 40px 20px;
     background: var(--color-popup-bg);
     border-radius: 20px;
     opacity: 0;
@@ -60,4 +59,8 @@
 
 .modal-content {
     color: var(--color-popup-txt);
+}
+
+.modal-no-scroll {
+    overflow: hidden;
 }
