--- a/src/partials/exercises-static-block.html
+++ b/src/partials/exercises-static-block.html
@@ -2,23 +2,23 @@
     <picture>
         <source 
             srcset="
-            ../img/home-women-taking-break.jpg 1x, 
-            ../img/home-women-taking-break@2x.jpg 2x" 
+            ./img/home-women-taking-break.jpg 1x, 
+            ./img/home-women-taking-break@2x.jpg 2x" 
             media="(min-width: 1440px)">
     
       <!-- Для екранів від 768px до 1167px -->
         <source 
             srcset="
-            ../img/home-women-taking-break-p.jpg 1x, 
-            ../img/home-women-taking-break-p@2x.jpg 2x" 
+            ./img/home-women-taking-break-p.jpg 1x, 
+            ./img/home-women-taking-break-p@2x.jpg 2x" 
             media="(min-width: 768px)">
     
         <!-- Для екранів менше 768px -->
         <img 
             srcset="
-            ../img/home-women-taking-break-m.jpg 1x, 
-            ../img/home-women-taking-break-m@2x.jpg 2x" 
-            alt="Опис зображення"
+            ./img/home-women-taking-break-m.jpg 1x, 
+            ./img/home-women-taking-break-m@2x.jpg 2x" 
+            alt="Talking women"
             class="static-image"
         >
     </picture>
