--- a/src/partials/quote-of-day.html
+++ b/src/partials/quote-of-day.html
@@ -12,10 +12,8 @@
             </svg>
         </div>
         <blockquote class="blockquote">
-            <p class="blockquote-text">
-                A lot of times I find that people who are blessed with the most talent don't ever develop that attitude, and the ones who aren't blessed in that way are the most competitive and have the biggest heart.
-            </p>
+            <p class="blockquote-text"></p>
         </blockquote>
-        <p class="quote-author">Tom Brady</p>
+        <p class="quote-author"></p>
     </div>
 </div>
