--- a/src/css/group-list.css
+++ b/src/css/group-list.css
@@ -2,6 +2,7 @@
   font-family: var(--font-family);
   display: flex;
   flex-direction: row;
+  align-content: flex-start;
   flex-wrap: wrap;
   gap: 20px;
 }
