--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,3 +15,4 @@
 @import url('./quote-of-day.css');
 @import url('./group-list.css');
 @import url('./static-block.css');
+@import url('./loader.css');
