--- a/src/css/root.css
+++ b/src/css/root.css
@@ -30,6 +30,7 @@
     --color-workout-border: rgba(239, 237, 232, 0.2);
     --color-workout-light: rgba(36, 36, 36, 0.4);
 
+    --color-popup-backdrop: rgba(4, 4, 4, 0.4);
     --color-popup-bg: #242424;
     --color-popup-txt: rgba(244, 244, 244, 0.6);
     --color-popup-main: #f4f4f4;
