--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -3,6 +3,8 @@ footer.container {
     color: var(--color-popup-main);
     padding: 40px 20px 10px 20px;
     margin-top: 80px;
+    max-width: 100%;
+    width: 100%;
 }
 
 @media only screen and (min-width: 768px) {
