--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -13,7 +13,7 @@
     text-indent: -9999em;
     transform: translateZ(0);
     animation-delay: -0.16s;
-    margin: auto;
+    margin: 60px auto 60px;
 }
 .loader:before,
 .loader:after {
