--- a/src/css/group-list.css
+++ b/src/css/group-list.css
@@ -1,71 +1,71 @@
 .group-list {
-  font-family: var(--font-family);
-  display: flex;
-  flex-direction: row;
-  align-content: flex-start;
-  flex-wrap: wrap;
-  gap: 20px;
+    font-family: var(--font-family);
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 .group-list__item {
-  height: 225px;
-  flex: 0 0 100%;
-  border-radius: 12px;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
+    height: 225px;
+    flex: 0 0 100%;
+    border-radius: 12px;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
 .group-list__item-image-filter {
-  background-color: rgba(17,17,17,.5);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+    background-color: rgba(17, 17, 17, 0.5);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 .group-list__item-image {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .group-list__item-title {
-  font-size: 24px;
-  font-weight: 400;
-  color: var(--color-main-light);
-  text-transform: capitalize;
+    font-size: 24px;
+    font-weight: 400;
+    color: var(--color-main-light);
+    text-transform: capitalize;
 }
 
 .group-list__item-subtitle {
-  font-weight: 400;
-  font-size: 12px;
-  color: var(--color-section-light)
+    font-weight: 400;
+    font-size: 12px;
+    color: var(--color-section-light);
 }
 
 @media (min-width: 768px) {
-  .group-list {
-    gap: 32px 15px;
-  }
+    .group-list {
+        gap: 32px 15px;
+    }
 
-  .group-list__item {
-    flex-basis: 225px;
-  }
+    .group-list__item {
+        flex-basis: calc((100% - 30px) / 3);
+    }
 }
 
-@media (min-width: 1168px) {
+@media (min-width: 1440px) {
     .group-list {
-       width: 900px;
+        width: 900px;
     }
 
     .group-list__item {
         height: 242px;
-        flex-basis: 290px;
+        flex-basis: calc((100% - 30px) / 3);
     }
 }
