--- a/src/css/home-block-2.css
+++ b/src/css/home-block-2.css
@@ -39,7 +39,7 @@
 }
 
 .exercises-menu-button.active::after {
-    content: "";
+    content: '';
     display: block;
     width: 100%;
     height: 4px;
@@ -48,7 +48,7 @@
     margin-top: 8px;
 }
 
-@media (min-width: 768px) and (max-width: 1167px) {
+@media (min-width: 768px) and (max-width: 1439px) {
     .section-title {
         font-size: 44px;
         line-height: 1.09;
