--- a/src/partials/sct-hero.html
+++ b/src/partials/sct-hero.html
@@ -11,7 +11,7 @@
         <div class="hero-content">
             <h2>
                 <svg class="icon" width="59" height="59">
-                    <use xlink:href="../img/icons.svg#icon-sun"></use>
+                    <use xlink:href="./img/icons.svg#icon-sun"></use>
                 </svg>
                 Get <span class="highlight">Body</span> in shape, Stay healthy
             </h2>
@@ -23,7 +23,7 @@
         <div class="tag-image-wrapper">
             <!-- Маленька картинка -->
             <div class="small-image">
-                <img src="../img/header-women.jpg" alt="Small Image">
+                <img src="./img/header-women.jpg" alt="Small Image">
             </div>
 
             <!-- Теги для десктопа зверху -->
@@ -38,11 +38,11 @@
         <!-- Головне зображення (герой-картинка) -->
         <div class="hero-image">
             <picture>
-                <source srcset="../img/hero-m.jpg 1x, ../img/hero-m@2x.jpg 2x" media="(max-width: 767px)">
-                <source srcset="../img/hero-p.jpg 1x, ../img/hero-p@2x.jpg 2x"
+                <source srcset="./img/hero-m.jpg 1x, ./img/hero-m@2x.jpg 2x" media="(max-width: 767px)">
+                <source srcset="./img/hero-p.jpg 1x, ./img/hero-p@2x.jpg 2x"
                     media="(min-width: 768px) and (max-width: 1440px)">
-                <source srcset="../img/hero.jpg 1x, ../img/hero@2x.jpg 2x" media="(min-width: 1441px)">
-                <img src="../img/hero.jpg" srcset="../img/hero.jpg 1x, ../img/hero@2x.jpg 2x" alt="Hero Image">
+                <source srcset="./img/hero.jpg 1x, ./img/hero@2x.jpg 2x" media="(min-width: 1441px)">
+                <img src="./img/hero.jpg" srcset="./img/hero.jpg 1x, ./img/hero@2x.jpg 2x" alt="Hero Image">
             </picture>
         </div>
 
