correct min mobile width

--- a/src/partials/norm-of-sports.html
+++ b/src/partials/norm-of-sports.html
@@ -17,9 +17,9 @@
     <li class="">
         <img
             class="women-outdoors-card"
-            src="../img/favorits-women-m.jpg"
+            src="./img/favorits-women-m.jpg"
             alt="Women sportswear working out outdoors"
-            style="object-fit: cover;"
+            style="object-fit: cover"
         />
     </li>
 </ul>
