--- a/src/css/sct-exercises.css
+++ b/src/css/sct-exercises.css
@@ -191,6 +191,7 @@
     height: 44px;
     margin-top: 40px;
     margin-bottom: 20px;
+    width: 335px;
 }
 
 @media screen and (min-width: 768px) {
