--- a/src/css/sct-hero.css
+++ b/src/css/sct-hero.css
@@ -32,10 +32,8 @@
     object-fit: cover;
 }
 
-/* MOBILE Медіазапит для пристроїв з високою щільністю пікселів і шириною до 767px */
-@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-    screen and (min-resolution: 192dpi) and (max-width: 767px),
-    screen and (min-resolution: 2dppx) and (max-width: 767px) {
+/* MOBILE  */
+@media screen and (max-width: 767px) {
     
 
     .hero-content {
@@ -111,7 +109,7 @@
         }
 }
 
-/*  TABLET Медіазапит для екранів з мінімальною шириною 768px */
+/*  TABLET  */
 @media screen and (min-width: 768px) {
     
 
@@ -192,7 +190,7 @@
     }
 }
 
-/* DESKTOP Медіазапит для екранів з мінімальною шириною 1441px */
+/* DESKTOP  */
 @media screen and (min-width: 1441px) {
     
 
