--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
-<footer class="container">
-    <div class="footer-container">
+<footer>
+    <div class="footer-container container">
         <div class="footer-content">
             <div class="footer-logo-socials">
                 <a class="logo" href="./">
@@ -15,9 +15,16 @@
                 <p>Transforming your <em>body</em> shape with us</p>
             </div>
             <div class="footer-subscribe">
-                <p class="footer-subscribe-title">Subscribe and learn about new exercises!</p>
+                <p class="footer-subscribe-title">
+                    Subscribe and learn about new exercises!
+                </p>
                 <form class="footer-form">
-                    <input class="footer-input" placeholder="Email" name="email" required>
+                    <input
+                        class="footer-input"
+                        placeholder="Email"
+                        name="email"
+                        required
+                    />
                     <button class="footer-button" type="submit">Send</button>
                 </form>
             </div>
