--- a/src/css/sct-exercises.css
+++ b/src/css/sct-exercises.css
@@ -81,7 +81,7 @@
 .rating {
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 9px;
 }
 
 .rating-star {
@@ -603,6 +603,17 @@
 
 .rating-star__full {
     fill: var(--color-stars-full);
+}
+
+.remove-favorite {
+    border: none;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.remove-favorite__icon {
+    fill: var(--color-main-dark);
 }
 
 /* #endregion */
