--- a/src/css/sct-favorites.css
+++ b/src/css/sct-favorites.css
@@ -64,15 +64,12 @@
     line-height: 1.3;
     text-align: center;
 }
-.rating {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-}
+
 .rating-star {
     display: flex;
     align-items: center;
     gap: 2px;
+    margin-left: 7px;
 }
 .text-star {
     font-family: 'DM Sans';
