--- a/src/css/sct-hero.css
+++ b/src/css/sct-hero.css
@@ -85,6 +85,7 @@
 
     .mobile-tags {
         display: flex;
+        gap: 8px;
         font-size: 14px;
         font-weight: 400;
         line-height: 18px;
@@ -175,6 +176,7 @@
 
     .mobile-tags {
         display: flex;
+        gap: 8px;
         font-size: 16px;
         line-height: 24px;
         justify-content: flex-end;
