--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -91,13 +91,20 @@ footer {
 @media only screen and (max-width: 767px) {
     .footer-socials .socials-icon {
         fill: var(--color-main-light);
-        width: 24px;
-        height: 24px;
+        width: 28px;
+        height: 28px;
     }
 
     .footer-socials .socials-link {
-        width: 24px;
-        height: 24px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
     }
 }
 
