--- a/src/css/socials.css
+++ b/src/css/socials.css
@@ -6,16 +6,26 @@
 }
 
 .socials-item {
+    position: relative;
     border-radius: 10px;
-    padding: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+    width: 44px;
+    height: 44px;
 }
 
 .socials-link {
-    width: 28px;
-    height: 28px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
 }
 
 .socials-icon {
