--- a/src/css/root.css
+++ b/src/css/root.css
@@ -52,7 +52,7 @@
     --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     /* breaking points */
-    --bp-mobile: 320px;
+    --bp-mobile: 375px;
     --bp-tablet: 768px;
     --bp-desctop: 1280px;
 }
@@ -85,7 +85,7 @@ body {
     font-weight: 500;
     color: var(--clr-main-dark);
     background-color: var(--color-main-bg);
-    min-width: 320px;
+    min-width: var(--bp-mobile);
 
     /*  For better font rendering */
     -webkit-font-smoothing: antialiased;
