--- a/src/css/home-block-2.css
+++ b/src/css/home-block-2.css
@@ -1,6 +1,6 @@
 .section-top {
     width: 100%;
-    padding: 20px;
+    padding: 20px 0 0;
     margin: 0 auto;
     padding-left: 0;
 }
@@ -75,6 +75,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 32px;
+        padding: 32px 0 0;
+        margin-top: 32px;
     }
 }
