--- a/src/css/sct-hero.css
+++ b/src/css/sct-hero.css
@@ -266,7 +266,7 @@
         color: #242424;
         text-align: center;
         display: inline-block;
-        font-weight: 400px;
+        font-weight: 400;
     }
 
     .mobile-tags {
