--- a/src/css/sct-exercises.css
+++ b/src/css/sct-exercises.css
@@ -26,7 +26,7 @@
 
 @media only screen and (min-width: 768px) {
     .exercise-card {
-        flex-basis: calc(100% - 16px) / 2;
+        flex-basis: calc((100% - 16px) / 2);
     }
 }
 
@@ -56,7 +56,7 @@
 
 @media screen and (min-width: 768px) {
     .exercise-info__content {
-        flex-basis: calc(100% - 16px) / 2;
+        flex-basis: calc((100% - 16px) / 2);
     }
 }
 
