--- a/src/partials/exercises-static-block.html
+++ b/src/partials/exercises-static-block.html
@@ -15,6 +15,7 @@
     
         <!-- Для екранів менше 768px -->
         <img 
+            src="./img/home-women-taking-break-m.jpg"
             srcset="
             ./img/home-women-taking-break-m.jpg 1x, 
             ./img/home-women-taking-break-m@2x.jpg 2x" 
