--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,7 +1,5 @@
 .header {
-    padding: 0 20px;
-    margin-top: 20px;
-    margin-bottom: 84px;
+    padding: 20px 20px 84px;
 }
 
 .header-nav {
@@ -34,9 +32,8 @@ header .logo-icon {
 
 @media only screen and (min-width: 768px) {
     .header {
-        padding: 0 32px;
-        margin-top: 24px;
-        margin-bottom: 100px;
+        padding: 24px 32px 100px;
+        padding-bottom: 100px;
     }
     .header-nav {
         justify-content: left;
@@ -61,6 +58,7 @@ header .logo-icon {
         background: var(--color-main-dark);
         padding: 8px 34px;
         gap: 10px;
+        margin-right: 80px;
     }
 
     .nav-item.active {
@@ -100,9 +98,7 @@ header .logo-icon {
 
     @media only screen and (min-width: 1440px) {
         .header {
-            padding: 0 32px;
-            margin-top: 28px;
-            margin-bottom: 90px;
+            padding: 28px 32px 90px;
         }
 
         .nav-list {
