--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
 @import url('./sct-hero.css');
 @import url('./home-block-2.css');
 @import url('./sct-exercises.css');
+@import url('./exercise-info.css');
 @import url('./sct-qfd.css');
 @import url('./footer.css');
 @import url('./mobile-menu.css');
@@ -18,3 +19,4 @@
 @import url('./modal/modal.css');
 @import url('./scroll-to-top.css');
 @import url('./loader.css');
+@import url('./rating-form.css');
