--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,7 +1,3 @@
-.header {
-    padding: 20px 20px 84px;
-}
-
 .header-nav {
     display: flex;
     align-items: center;
@@ -20,6 +16,10 @@ header .logo-icon {
     fill: var(--color-main-dark);
 }
 
+.header-container {
+    padding: 20px 0px;
+}
+
 @media only screen and (max-width: 767px) {
     .header-socials.socials {
         display: none;
@@ -31,10 +31,6 @@ header .logo-icon {
 }
 
 @media only screen and (min-width: 768px) {
-    .header {
-        padding: 24px 32px 100px;
-        padding-bottom: 100px;
-    }
     .header-nav {
         justify-content: left;
     }
@@ -42,6 +38,7 @@ header .logo-icon {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 24px 0;
     }
 
     header .logo {
@@ -97,8 +94,8 @@ header .logo-icon {
     }
 
     @media only screen and (min-width: 1440px) {
-        .header {
-            padding: 28px 32px 90px;
+        .header-container {
+            padding: 28px 0;
         }
 
         .nav-list {
