--- a/src/css/sct-hero.css
+++ b/src/css/sct-hero.css
@@ -2,20 +2,35 @@
 
 /* Глобальні стилі */
 
+.hero-section {
+    padding-top: 96px;
+    padding-bottom: 64px;
+}
 
 .tags span {
     padding: 5px 10px;
+    display: block;
     border-radius: 30px;
     font-size: 0.9rem;
     border: 1px solid #242424;
 }
 
 
+.hero-first-part {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 32px;
+}
+
 .mobile-tags,
 .desktop-tags {
     display: none;
 }
 
+.desktop-tags {
+    display: flex;
+    justify-content: space-between;
+}
 
 .hero-image img {
     width: 100%;
@@ -156,11 +171,7 @@
         text-align: left;
     }
 
-    .hero-section {
-       
-        max-width: 768px;
-        margin: 0 auto;
-    }
+   
 
     .hero-content .highlight {
         font-style: italic;
@@ -213,7 +224,7 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 10px;
-        margin-bottom: -120px;
+       
         position: relative;
       
     }
@@ -241,11 +252,7 @@
         letter-spacing: -0.02em;
     }
 
-    .hero-section {
-        
-        max-width: 1376px;
-        margin: 0 auto;
-    }
+    
 
     .icon {
         width: 59px;
@@ -283,7 +290,7 @@
         line-height: 24px;
         margin-top: 10px;
         
-        margin-bottom: 32px;
+        
     }
 
     .hero-image img {
@@ -304,8 +311,8 @@
     }
 
     .small-image {
-        position: absolute;
-        display: block;
+        
+        display: inline-block;
         top: -130px;
         
         right: 0;
@@ -323,4 +330,17 @@
     width: 100%;
     height: auto;
     display: block;
+}
+.tag-image-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.tag-image-wrapper {
+    display: flex;
+    align-items: center;
+    
 }
