--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,7 @@
 @import url('./sct-qfd.css');
 @import url('./footer.css');
 @import url('./mobile-menu.css');
-@import url('./sct-favorites.css');
+/* @import url('./sct-favorites.css'); */
 @import url('./quote-of-day.css');
 @import url('./group-list.css');
 @import url('./static-block.css');
